projects/sandbox/deployment/dr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metis-sandbox-ui-ingress-dr
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  ingressClassName: public-iks-k8s-nginx
 # tls:
 #   - hosts:
  #      - metis-sandbox.dr.eanadev.org
  #    secretName: metis-sandbox.dr.eanadev.org
  rules:
    - host: metis-sandbox.dr.eanadev.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metis-sandbox-ui-service-dr
                port:
                  number: 8080
